responsive navbar, primera pag index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Domii</title>
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -14,14 +15,17 @@
 
     <header>
         <section class="encabezado">
-            <a href="./index.html"><img class="logo" src="./assets/img/logo1.png" alt="logoDomii"></a>              
+            <div class="logo">
+            <a href="./index.html"><img class="logo" src="./assets/img/logo1.png" alt="logoDomii"></a>  
+            </div>
             <nav class="navbar">
-                <ul class="nav-links">
-                    <li class="nav-inicio"><a href="./index.html"><strong>Inicio</strong></a></li>
+                <ul class="nav-list">
+                    <li><a href="./index.html"><strong>Inicio</strong></a></li>
                     <li><a href="./pages/mitienda.html">Mi Tienda</a></li>
                     <li><a href="./pages/quienesomos.html">¿Quiénes somos?</a></li>
                 </ul>
             </nav>
+            <!-- Botones inicio/registro -->
             <section class="botones">
             <div class="boton-inicio">
                 <ul>
@@ -33,7 +37,7 @@
                     <li><a href="./pages/registro.html">Registrarse</a></li>
                 </ul>
             </div>
-        </section>
+        </section> 
         </section>
     </header>
     <main>
@@ -196,8 +200,6 @@
         </div>
 
     </footer>
-
-
 
 </body>
 
