--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -13,33 +13,58 @@
 
 <body>
 <!-- Encabezado -->
- <header>
-    <section class="encabezado">
-        <a href="../index.html"><img class="logo" src="../assets/img/logo1.png" alt="logoDomii"></a>
-        <nav class="navbar">
-            <ul>
-                <li class="nav-inicio"><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/mitienda.html">Mi Tienda</a></li>
-                <li><a href="../pages/quienesomos.html"><strong>¿Quiénes somos?</strong></a></li>
-            </ul>
-        </nav>
-        
-        <section class="botones">
-        <div class="boton-inicio">
-            <ul>
-                <li><a href="../pages/registro.html">Iniciar sesión</a></li>
-            </ul>
+ <!-- <header>
+
+      <section>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid">
+          <a class="img" href="../index.html"><img src="../assets/img/logo1.png" alt=""></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="../index.html">Inicio</a>
+              <a class="nav-link" href="../pages/mitienda.html">Mi tienda</a>
+              <a class="nav-link active" href="../pages/quienesomos.html">¿Quiénes somos?</a>
+            </div>
+          </div>
         </div>
-        <div class="boton-registro">
-            <ul>
-                <li><a href="../pages/registro.html">Registrarse</a></li>
-            </ul>
-        </div>
-    </section>
-    </section>
+      </nav>
+    </section> -->
+      <!-- Primera version -->
+      <header>
+        <section class="encabezado">
+            <div class="logo">
+            <a href="../index.html"><img class="logo" src="../assets/img/logo1.png" alt="logoDomii"></a>  
+            </div>
+            <nav class="navbar">
+                <ul class="nav-list">
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../pages/mitienda.html">Mi Tienda</a></li>
+                    <li><a href="../pages/quienesomos.html">¿Quiénes somos?</a></li>
+                </ul>
+            </nav>
+            <!-- Botones inicio/registro -->
+            <section class="botones">
+            <div class="boton-inicio">
+                <ul>
+                    <li><a href="../pages/registro.html">Iniciar sesión</a></li>
+                </ul>
+            </div>
+            <div class="boton-registro">
+                <ul>
+                    <li><a href="../pages/registro.html">Registrarse</a></li>
+                </ul>
+            </div>
+        </section> 
+        </section>
+    </header>
+
 </header>
 <!-- FIN Encabezado -->
     <main>
+        <section class="main">
         <div class="somos-domii">
         <h2>Nosotros somos Domii</h2>
 
@@ -69,6 +94,7 @@
               <span class="visually-hidden">Next</span>
             </button>
           </div>
+          <div class="texto1">
             <p>Lorem ipsum dolor sit amet consectetur. Eget varius mauris
                 nisl consequat malesuada diam. Purus sapien laoreet nec
                 malesuada cras auctor. Pellentesque viverra faucibus at arcu
@@ -93,10 +119,8 @@
                 eget sed lectus ut vitae.
                 Nunc sed odio blandit ut felis dictum consectetur at netus. Eu
                 adipiscing scelerisque lacinia potenti in. Quam mauris blandit.</p>
-
-                </section>
-
-    
+            </div>
+        </section>
 
     </main>
 
