--- a/pages/mitienda.html
+++ b/pages/mitienda.html
@@ -11,30 +11,33 @@
 
 <body>
 <!-- Encabezado -->
-    <header>
-        <section class="encabezado">
-            <a href="../index.html"><img class="logo" src="../assets/img/logo1.png" alt="logoDomii"></a>
-            <nav class="navbar">
-                <ul>
-                    <li class="nav-inicio"><a href="../index.html">Inicio</a></li>
-                    <li><a href="../pages/mitienda.html"><strong>Mi Tienda</strong></a></li>
-                    <li><a href="../pages/quienesomos.html">¿Quiénes somos?</a></li>
-                </ul>
-            </nav>
-            <section class="botones">
-            <div class="boton-inicio">
-                <ul>
-                    <li><a href="../pages/registro.html">Iniciar sesión</a></li>
-                </ul>
-            </div>
-            <div class="boton-registro">
-                <ul>
-                    <li><a href="../pages/registro.html">Registrarse</a></li>
-                </ul>
-            </div>
-        </section>
-        </section>
-    </header>
+<header>
+    <section class="encabezado">
+        <div class="logo">
+        <a href="../index.html"><img class="logo" src="../assets/img/logo1.png" alt="logoDomii"></a>  
+        </div>
+        <nav class="navbar">
+            <ul class="nav-list">
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pages/mitienda.html">Mi Tienda</a></li>
+                <li><a href="../pages/quienesomos.html">¿Quiénes somos?</a></li>
+            </ul>
+        </nav>
+        <!-- Botones inicio/registro -->
+        <section class="botones">
+        <div class="boton-inicio">
+            <ul>
+                <li><a href="../pages/registro.html">Iniciar sesión</a></li>
+            </ul>
+        </div>
+        <div class="boton-registro">
+            <ul>
+                <li><a href="../pages/registro.html">Registrarse</a></li>
+            </ul>
+        </div>
+    </section> 
+    </section>
+</header>
 <!-- FIN Encabezado -->
     <main>
         <section class="tienda">
