sass completo al proyecto

--- a/pages/registro.html
+++ b/pages/registro.html
@@ -24,7 +24,7 @@
                 </ul>
             </nav>
             <!-- Botones inicio/registro -->
-            <section class="botones">
+            <section class="botones-no">
             <div class="boton-inicio">
                 <ul>
                     <li><a href="../pages/registro.html">Iniciar sesión</a></li>
@@ -65,13 +65,17 @@
                         <input type="text" placeholder="Correo electrónico" id="correo">
                         <label for="contraseña"></label>
                         <input type="password" placeholder="Contraseña" id="contraseña">
+                        <a href="./registro.html">
                         <div class="boton-inicio2">
                                 <p>Iniciar sesión</p>
                         </div>
-                        <a href="">
-                            <p class="olvide">¿Olvide la contraseña?</p>
                         </a>
-                        <p>No tengo cuenta <a href=""><strong>Registrarme.</strong></a></p>
+                        <div class="olvide1">
+                            <a href="./registro.html">
+                                <p class="olvide">¿Olvide la contraseña?</p>
+                            </a>
+                            <p>No tengo cuenta <a href="./registro.html"><strong>Registrarme.</strong></a></p>
+                        </div>
                     </div>
                 </div>
             </section>
@@ -79,28 +83,28 @@
         <!-- Pie de página -->
         <footer>
             <div class="info">
-                <a href="">
+                <a href="./quienesomos.html">
                     <h4>Quienes somos</h4>
                 </a>
-                <a href="">
+                <a href="./quienesomos.html">
                     <h4>Blog</h4>
                 </a>
-                <a href="">
+                <a href="./quienesomos.html">
                     <h4>Contacto</h4>
                 </a>
-                <a href="">
+                <a href="./quienesomos.html">
                     <h4>Atención y PQRS</h4>
                 </a>
-                <a href="">
+                <a href="./quienesomos.html">
                     <h4>Preguntas frecuentes</h4>
                 </a>
             </div>
             <div class="contacto">
                 <h4>Contactanos</h4>
                 <div class="logosinfo">
-                    <a href=""><img src="../assets/img/insta.png" alt=""></a>
-                    <a href=""><img src="../assets/img/face.png" alt=""></a>
-                    <a href=""><img src="../assets/img/tik.png" alt=""></a>
+                    <a href="./quienesomos.html"><img src="../assets/img/insta.png" alt=""></a>
+                    <a href="./quienesomos.html"><img src="../assets/img/face.png" alt=""></a>
+                    <a href="./quienesomos.html"><img src="../assets/img/tik.png" alt=""></a>
 
                 </div>
 
