--- a/pages/mitienda.html
+++ b/pages/mitienda.html
@@ -19,7 +19,7 @@
         <nav class="navbar">
             <ul class="nav-list">
                 <li><a href="../index.html">Inicio</a></li>
-                <li><a href="../pages/mitienda.html">Mi Tienda</a></li>
+                <li><a href="../pages/mitienda.html"><strong>Mi Tienda</strong></a></li>
                 <li><a href="../pages/quienesomos.html">¿Quiénes somos?</a></li>
             </ul>
         </nav>
@@ -62,7 +62,7 @@
                 <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1800.086937675921!2d-75.60376389516092!3d6.23102056913925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e44299388a19aa3%3A0xc8a04880b51badc9!2sComfama%20Centro%20Comercial%20Los%20Molinos!5e0!3m2!1ses!2sco!4v1682628746115!5m2!1ses!2sco" width="390" height="278" style="border:0" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 <div class="enviar-boton">
                     <label for="guardar"></label>
-                <input type="submit" name="Guardar" id="guardar">
+                    <input type="submit" name="Guardar" id="guardar">
                 </div>
             </form>
             </div>
