se agrega readme y algo de SEO

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Envíos rápidos y seguros en Colombia. Domii, la solución para tu negocio. Pagos contraentrega">
+    <meta name="keywords" content="Envios contraentrega, domicilios medellin, domicilios contraentrega, pagos seguros, envios seguros, envios medellin, envios pago contraentrega, domicilio pago contraentrega">
     <title>Domii</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
 
 </head>
