--- a/pages/mitienda.html
+++ b/pages/mitienda.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domii</title>
+    <meta name="description" content="Ingresa y actualiza tus datos de tienda en Domii. ¡Es hora de potenciar tu negocio!">
+    <meta name="keywords" content="mi tienda domii, crear tienda en domii, mi tienda de envios">
+    <title>Mi tienda - Domii</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
