--- a/pages/registro.html
+++ b/pages/registro.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domii</title>
+    <meta name="description" content="Regístrate en Domii y mejora tus envíos. ¡Fácil y rápido!">
+    <meta name="keywords" content="inicio de sesion en domii, registro en domii, registrarme en domii">
+    <title>Inicio sesión/Registro Domii</title>
+    <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 
