--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -5,7 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Domii</title>
+  <meta name="description" content="Conoce nuestro equipo y la historia de Domii, Eres parte!">
+  <meta name="keywords" content="equipo domii, trabaja con nosotros domii, domii equipo, trabajo en domii">
+  <title>Quiénes somos Domii</title>
+  <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
