se agrega información real

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Envíos rápidos y seguros en Colombia. Domii, la solución para tu negocio. Pagos contraentrega">
-    <meta name="keywords" content="Envios contraentrega, domicilios medellin, domicilios contraentrega, pagos seguros, envios seguros, envios medellin, envios pago contraentrega, domicilio pago contraentrega">
+    <meta name="description"
+        content="Envíos rápidos y seguros en Colombia. Domii, la solución para tu negocio. Pagos contraentrega">
+    <meta name="keywords"
+        content="Envios contraentrega, domicilios medellin, domicilios contraentrega, pagos seguros, envios seguros, envios medellin, envios pago contraentrega, domicilio pago contraentrega">
     <title>Domii</title>
     <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="./css/style.css">
@@ -19,7 +21,7 @@
     <header>
         <section class="encabezado">
             <div class="logo">
-                <a href="./index.html"><img class="logo" src="./assets/img/logo1.png" alt="logoDomii"></a>  
+                <a href="./index.html"><img class="logo" src="./assets/img/logo1.png" alt="logo Domii"></a>
             </div>
             <nav class="navbar">
                 <ul class="nav-list">
@@ -40,7 +42,7 @@
                         <li><a href="./pages/registro.html">Registrarse</a></li>
                     </ul>
                 </div>
-            </section> 
+            </section>
         </section>
     </header>
     <main>
@@ -50,39 +52,45 @@
                 <div class="banner-text">
                     <h1>Bienvenido a Domii</h1>
                     <h3>Ahora podrás:</h3>
-                    <h4>Realizar un seguimiento de tus envíos, obtener información sobre el estado de entrega y, lo más importante, disfrutar de la conveniencia de los pagos contraentrega.</h4>
+                    <h4>Realizar un seguimiento de tus envíos, obtener información sobre el estado de entrega y, lo más
+                        importante, disfrutar de la conveniencia de los pagos contraentrega.</h4>
                 </div>
                 <div class="banner-img">
-                    <img src="./assets/img/banner2.png" alt="">
+                    <img src="./assets/img/banner2.png" alt="imagen de mensajero">
                 </div>
             </div>
         </section>
 
         <!-- Cards -->
         <section class="box">
-            <div class="card">
-                <img src="./assets/img/mensajero.svg" alt="">
-                <div>
-                    <h3>Nuevo domicilio</h3>
-                    <p>Solicita un Domii, recuerda que lo puedes programar</p>
+            <a href="./index.html">
+                <div class="card">
+                    <img src="./assets/img/mensajero.svg" alt="ilustración de mensajero">
+                    <div>
+                        <h3>Nuevo domicilio</h3>
+                        <p>Solicita un Domii, recuerda que lo puedes programar</p>
+                    </div>
                 </div>
-            </div>
+            </a>
             <a href="./pages/historial.html">
                 <div class="card2">
-                    <img src="./assets/img/motico.svg" alt="">
+                    <img src="./assets/img/motico.svg" alt="ilustración de moto">
                     <div>
                         <h3>En tránsito</h3>
                         <p>Mira el estado de tus Domii en tiempo real</p>
                     </div>
                 </div>
             </a>
-            <div class="card3">
-                <img src="./assets/img/calculadora.svg" alt="">
-                <div>
-                    <h3>Cotizar</h3>
-                    <p>Cotizar el precio de tu Domii, checka en cuanto te queda</p>
+            <a href="./index.html">
+                <div class="card3">
+                    <img src="./assets/img/calculadora.svg" alt="ilustración de calculadora">
+                    <div>
+                        <h3>Cotizar</h3>
+                        <p>Cotizar el precio de tu Domii, checka en cuanto te queda</p>
+                    </div>
                 </div>
-            </div>
+            </a>
+
 
         </section>
 
@@ -94,77 +102,75 @@
         </div>
         <section class="ventajas">
             <div class="ventajas1">
-                <img src="./assets/img/motico1.svg" alt="">
-                    <div>
-                        <h4>Titulo1</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, eos quos, et eligendi suscipit qui
-                            reiciendis provident corporis accusantium adipisci illo ipsam odio, nemo obcaecati culpa illum
-                            voluptatem. Ullam, temporibus!</p>
-                    </div>
+                <img src="./assets/img/motico1.svg" alt="icono moto">
+                <div>
+                    <h4>Envíos rápidos y seguros</h4>
+                    <p>Confía en Domii para envíos rápidos y seguros de tus productos. Nuestra flota de domiciliarios
+                        capacitados y nuestra tecnología avanzada garantizan entregas rápidas y confiables, brindando
+                        tranquilidad a tu negocio y a tus clientes.</p>
+                </div>
             </div>
             <div class="ventajas2">
-                <img src="./assets/img/motico1.svg" alt="">
-                    <div>
-                        <h4>Titulo1</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, eos quos, et eligendi suscipit qui
-                            reiciendis provident corporis accusantium adipisci illo ipsam odio, nemo obcaecati culpa illum
-                            voluptatem. Ullam, temporibus!</p>
-                    </div>
-
+                <img src="./assets/img/dinero.jpg" alt="icono dinero">
+                <div>
+                    <h4>Pagos contraentrega</h4>
+                    <p>Simplifica tus transacciones con Domii. Aceptamos pagos contraentrega, lo que permite a tus
+                        clientes pagar al momento de recibir sus productos. Esta conveniente opción de pago mejora la
+                        experiencia del cliente y aumenta la confianza en tu negocio.</p>
+                </div>
             </div>
             <div class="ventajas3">
-                <img src="./assets/img/motico1.svg" alt="">
-                    <div>
-                        <h4>Titulo1</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, eos quos, et eligendi suscipit qui
-                            reiciendis provident corporis accusantium adipisci illo ipsam odio, nemo obcaecati culpa illum
-                            voluptatem. Ullam, temporibus!</p>
-                    </div>
+                <img src="./assets/img/caja.jpg" alt="icono caja">
+                <div>
+                    <h4>Seguimiento en Tiempo Real</h4>
+                    <p>Mantén el control total de tus envíos con Domii. Nuestra aplicación te permite hacer un
+                        seguimiento en tiempo real de tus paquetes, brindándote información actualizada sobre la
+                        ubicación y el estado de entrega. Siempre estarás informado y podrás proporcionar
+                        actualizaciones precisas a tus clientes.</p>
+                </div>
             </div>
         </section>
         <!-- Cuadros recomendaciones -->
 
         <div class="titulo3">
-            <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+            <h2>Envíos rápidos y confiables para tu negocio</h2>
 
         </div>
         <section class="cuadros">
             <div class="cuadro1">
-                <h4>Genial</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut porro adipisci, laboriosam ex animi
-                    assumenda exercitationem rerum veritatis ullam nemo optio nesciunt numquam eius corrupti, dolorem
-                    debitis esse consequatur. Voluptates?
-
+                <h4>Envíos rápidos </h4>
+                <p>Domii ha transformado nuestra forma de hacer entregas. Los envíos son rápidos y siempre llegan a
+                    tiempo. ¡Recomendaría esta aplicación a cualquier empresa que necesite un servicio de mensajería
+                    eficiente!" <br><br> <em>María, dueña de una tienda de ropa.</em>
                 </p>
             </div>
             <div class="cuadro2">
-                <h4>Genial</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut porro adipisci, laboriosam ex animi
-                    assumenda exercitationem rerum veritatis ullam nemo optio nesciunt numquam eius corrupti, dolorem
-                    debitis esse consequatur. Voluptates?
-
+                <h4>Eficientes y seguros</h4>
+                <p>Estoy impresionado con la calidad del servicio de Domii. Sus domiciliarios son amigables y
+                    profesionales, y siempre entregan mis productos en perfectas condiciones. ¡Sin duda, la mejor opción
+                    para mis envíos!" <br><br> <em>Juan, propietario de una tienda de electrónicos.</em>
                 </p>
             </div>
             <div class="cuadro3">
-                <h4>Genial</h4>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ut porro adipisci, laboriosam ex animi
-                    assumenda exercitationem rerum veritatis ullam nemo optio nesciunt numquam eius corrupti, dolorem
-                    debitis esse consequatur. Voluptates?
-
+                <h4>Confiabilidad y seguimiento en tiempo real</h4>
+                <p>Domii ha simplificado nuestras operaciones de envío. El seguimiento en tiempo real nos permite
+                    mantenernos informados y brindar a nuestros clientes actualizaciones precisas. Estamos encantados
+                    con la eficiencia y confiabilidad de esta aplicación."<br><br> <em> Laura, gerente de una tienda de productos
+                    naturales.</em>
                 </p>
             </div>
         </section>
-            <!-- descarga info -->
+        <!-- descarga info -->
 
         <section class="info-descarga">
             <div class="escanea">
                 <h3>Escanea con tu celular</h3>
-                <img src="./assets/img/code.png" alt="">
+                <img src="./assets/img/code.png" alt="codigo qr">
 
             </div>
             <div class="descarga">
                 <h3>App Domii</h3>
-                <img src="./assets/img/descarga.png" alt="">
+                <img src="./assets/img/descarga.png" alt="información de descarga en app store">
 
             </div>
 
@@ -174,35 +180,43 @@
     <!-- Pie de página -->
 
     <footer>
-        <div class="info">
-            <a href="">
-                <h4>Quienes somos</h4>
-            </a>
-            <a href="">
-                <h4>Blog</h4>
-            </a>
-            <a href="">
-                <h4>Contacto</h4>
-            </a>
-            <a href="">
-                <h4>Atención y PQRS</h4>
-            </a>
-            <a href="">
-                <h4>Preguntas frecuentes</h4>
-            </a>
-        </div>
-        <div class="contacto">
-            <h4>Contactanos</h4>
-            <div class="logosinfo">
-                <a href=""><img src="./assets/img/insta.png" alt=""></a>
-                <a href=""><img src="./assets/img/face.png" alt=""></a>
-                <a href=""><img src="./assets/img/tik.png" alt=""></a>
+        <section class="footer">
+            <div class="info">
+                <a href="./pages/quienesomos.html">
+                    <h4>Quienes somos</h4>
+                </a>
+                <a href="./pages/quienesomos.html">
+                    <h4>Blog</h4>
+                </a>
+                <a href="./pages/quienesomos.html">
+                    <h4>Contacto</h4>
+                </a>
+                <a href="./pages/quienesomos.html">
+                    <h4>Atención y PQRS</h4>
+                </a>
+                <a href="./pages/quienesomos.html">
+                    <h4>Preguntas frecuentes</h4>
+                </a>
+            </div>
+            <div class="contacto">
+                <h4>Contactanos</h4>
+                <div class="logosinfo">
+                    <a href="https://www.instagram.com/" target=_blank><img src="./assets/img/insta.png"
+                            alt="link de red social instagram"></a>
+                    <a href="https://www.facebook.com/" target=_blank><img src="./assets/img/face.png"
+                            alt="link de red social facebook"></a>
+                    <a href="https://www.tiktok.com/es/" target=_blank><img src="./assets/img/tik.png"
+                            alt="link de red social tiktok"></a>
+
+                </div>
 
             </div>
-
+        </section>
+        <div class="derechos">
+            <p>Derechos de Autor &copy; 2023 Domii. Todos los derechos reservados.</p>
         </div>
-
     </footer>
+
 
 </body>
 
