--- a/pages/historial.html
+++ b/pages/historial.html
@@ -50,31 +50,26 @@
     </div>
     <section class="historial1">
         <section class="card-historial">
-            <div class="card-historia-1">
+            <a href="../pages/historial.html"><div class="card-historia-1">
                 <h4>Domicilio #5</h4>
                 <p>2/03/2023</p>
-                <i class="fa-solid fa-arrow-right"></i>
-            </div>
-            <div class="card-historia-2">
+            </div></a>
+            <a href="../pages/historial.html"><div class="card-historia-2">
                 <h4>Domicilio #4</h4>
                 <p>2/03/2023</p>
-                <i class="fa-solid fa-arrow-right"></i>            
-            </div>
-            <div class="card-historia-3">
+            </div></a>
+            <a href="../pages/historial.html"><div class="card-historia-3">
                 <h4>Domicilio #3</h4>
                 <p>2/03/2023</p>
-                <i class="fa-solid fa-arrow-right"></i>            
-            </div>
-            <div class="card-historia-4">
+            </div></a>
+            <a href="../pages/historial.html"><div class="card-historia-4">
                 <h4>Domicilio #2</h4>
                 <p>2/03/2023</p>
-                <i class="fa-solid fa-arrow-right"></i>            
-            </div>
-            <div class="card-historia-5">
+            </div></a>
+            <a href="../pages/historial.html"><div class="card-historia-5">
                 <h4>Domicilio #1</h4>
                 <p>2/03/2023</p>
-                <i class="fa-solid fa-arrow-right"></i>            
-            </div>
+            </div></a>
         </section>
     <!-- FIN HISTORIAL  -->
 
@@ -82,7 +77,7 @@
         <section class="card-mapa">
             <div class="card-mapa-1">
                 <p>Mapa</p>
-                <img src="../assets/img/mapa1.png" alt="">
+                <img src="../assets/img/mapa1.png" alt="imagen del mapa">
             </div>
             <div class="card-mapa-2">
                 <i class="fa-solid fa-circle"></i>
@@ -104,7 +99,7 @@
             <div class="tu-domii">
                 <h4>Tu Domii</h4>
                 <div class="dom">
-                    <img src="../assets/img/domi1.png" alt="">
+                    <img src="../assets/img/domi1.png" alt="card info mensajero">
                     <div class="dom1">
                         <p>David Guerrero</p>
                         <div>
@@ -117,7 +112,7 @@
             <div class="productos">
                 <h4>Productos</h4>
                 <div>
-                    <img src="../assets/img/cadena1.png" alt="">
+                    <img src="../assets/img/cadena1.png" alt="card info producto">
                     <p>Paquete pequeño</p>
                     <p id="precio">$89.000</p>
                 </div>
@@ -138,9 +133,9 @@
                     </div>
                 </div>
             </div>
-            <div class="boton-ayuda">   
+            <a href="../pages/mitienda.html"><div class="boton-ayuda">   
                 <p>Ayuda</p>
-            </div>
+            </div></a>
         </section>
 
 
@@ -154,34 +149,38 @@
 </main>
 <!-- Pie de página -->
 <footer>
-    <div class="info">
-        <a href="">
-            <h4>Quienes somos</h4>
-        </a>
-        <a href="">
-            <h4>Blog</h4>
-        </a>
-        <a href="">
-            <h4>Contacto</h4>
-        </a>
-        <a href="">
-            <h4>Atención y PQRS</h4>
-        </a>
-        <a href="">
-            <h4>Preguntas frecuentes</h4>
-        </a>
-    </div>
-    <div class="contacto">
-        <h4>Contactanos</h4>
-        <div class="logosinfo">
-            <a href=""><img src="../assets/img/insta.png" alt=""></a>
-            <a href=""><img src="../assets/img/face.png" alt=""></a>
-            <a href=""><img src="../assets/img/tik.png" alt=""></a>
+    <section class="footer">
+        <div class="info">
+            <a href="../pages/quienesomos.html">
+                <h4>Quienes somos</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Blog</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Contacto</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Atención y PQRS</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Preguntas frecuentes</h4>
+            </a>
+        </div>
+        <div class="contacto">
+            <h4>Contactanos</h4>
+            <div class="logosinfo">
+                <a href="https://www.instagram.com/" target= _blank ><img src="../assets/img/insta.png" alt="link de red social instagram"></a>
+                <a href="https://www.facebook.com/" target= _blank><img src="../assets/img/face.png" alt="link de red social facebook"></a>
+                <a href="https://www.tiktok.com/es/" target= _blank><img src="../assets/img/tik.png" alt="link de red social tiktok"></a>
+
+            </div>
 
         </div>
-
-    </div>
-
+    </section>
+<div class="derechos">
+    <p>Derechos de Autor &copy; 2023 Domii. Todos los derechos reservados.</p>
+</div>
 </footer>
 <!-- FIN Pie de página -->
 
