--- a/pages/registro.html
+++ b/pages/registro.html
@@ -27,7 +27,7 @@
                 </ul>
             </nav>
             <!-- Botones inicio/registro -->
-            <section class="botones-no">
+            <section class="botones">
             <div class="boton-inicio">
                 <ul>
                     <li><a href="../pages/registro.html">Iniciar sesión</a></li>
@@ -45,21 +45,21 @@
     <main>
         <section class="registro">
             <div class="imagen1">
-                <img src="../assets/img/mock.png" alt="">
+                <img src="../assets/img/mock.png" alt="imagen de la interfaz de la aplicación">
             </div>
             <section class="inicio-sesion">
                 <h4>Iniciar sesión</h4>
                 <div class="card-inicio">
                     <div class="inicioGoogle">
-                        <img src="../assets/img/google.png" alt="">
+                        <img src="../assets/img/google.png" alt="logo de google">
                         <p>Continuar con Google</p>
                     </div>
                     <div class="inicioFacebook">
-                        <img src="../assets/img/facebook.png" alt="">
+                        <img src="../assets/img/facebook.png" alt="logo de facebook">
                         <p>Continuar con Facebook</p>
                     </div>
                     <div class="inicioTwitter">
-                        <img src="../assets/img/twitter.png" alt="">
+                        <img src="../assets/img/twitter.png" alt="logo de twitter">
                         <p>Continuar con Twitter</p>
                     </div>
                     <div class="separador">o</div>
@@ -85,34 +85,38 @@
         </section>
         <!-- Pie de página -->
         <footer>
-            <div class="info">
-                <a href="./quienesomos.html">
-                    <h4>Quienes somos</h4>
-                </a>
-                <a href="./quienesomos.html">
-                    <h4>Blog</h4>
-                </a>
-                <a href="./quienesomos.html">
-                    <h4>Contacto</h4>
-                </a>
-                <a href="./quienesomos.html">
-                    <h4>Atención y PQRS</h4>
-                </a>
-                <a href="./quienesomos.html">
-                    <h4>Preguntas frecuentes</h4>
-                </a>
-            </div>
-            <div class="contacto">
-                <h4>Contactanos</h4>
-                <div class="logosinfo">
-                    <a href="./quienesomos.html"><img src="../assets/img/insta.png" alt=""></a>
-                    <a href="./quienesomos.html"><img src="../assets/img/face.png" alt=""></a>
-                    <a href="./quienesomos.html"><img src="../assets/img/tik.png" alt=""></a>
-
+            <section class="footer">
+                <div class="info">
+                    <a href="../pages/quienesomos.html">
+                        <h4>Quienes somos</h4>
+                    </a>
+                    <a href="../pages/quienesomos.html">
+                        <h4>Blog</h4>
+                    </a>
+                    <a href="../pages/quienesomos.html">
+                        <h4>Contacto</h4>
+                    </a>
+                    <a href="../pages/quienesomos.html">
+                        <h4>Atención y PQRS</h4>
+                    </a>
+                    <a href="../pages/quienesomos.html">
+                        <h4>Preguntas frecuentes</h4>
+                    </a>
                 </div>
-
-            </div>
-
+                <div class="contacto">
+                    <h4>Contactanos</h4>
+                    <div class="logosinfo">
+                        <a href="https://www.instagram.com/" target= _blank ><img src="../assets/img/insta.png" alt="link de red social instagram"></a>
+                        <a href="https://www.facebook.com/" target= _blank><img src="../assets/img/face.png" alt="link de red social facebook"></a>
+                        <a href="https://www.tiktok.com/es/" target= _blank><img src="../assets/img/tik.png" alt="link de red social tiktok"></a>
+        
+                    </div>
+        
+                </div>
+            </section>
+        <div class="derechos">
+            <p>Derechos de Autor &copy; 2023 Domii. Todos los derechos reservados.</p>
+        </div>
         </footer>
         <!-- FIN Pie de página -->
 
