--- a/pages/quienesomos.html
+++ b/pages/quienesomos.html
@@ -9,8 +9,6 @@
   <meta name="keywords" content="equipo domii, trabaja con nosotros domii, domii equipo, trabajo en domii">
   <title>Quiénes somos Domii</title>
   <link rel="shortcut icon" href="../assets/img/favicon.ico" type="image/x-icon">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
 
 </head>
@@ -30,6 +28,7 @@
           <li><a href="../pages/quienesomos.html"><strong>¿Quiénes somos?</strong></a></li>
         </ul>
       </nav>
+
       <!-- Botones inicio/registro -->
       <section class="botones">
         <div class="boton-inicio">
@@ -52,62 +51,26 @@
     <section class="main">
       <div class="somos-domii">
         <h2>Nosotros somos Domii</h2>
-        <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-              aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-              aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-              aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="../assets/img/equipoDomii.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/equipo2.jpg" class="d-block w-100" alt="...">
-            </div>
-            <div class="carousel-item">
-              <img src="../assets/img/equipo3.jpg" class="d-block w-100" alt="...">
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+        <div class="equipo">
+            <img src="../assets/img/equipoDomii.jpg" alt="equipo completo de la empresa">
         </div>
         <div class="texto1">
-          <p>Lorem ipsum dolor sit amet consectetur. Eget varius mauris
-            nisl consequat malesuada diam. Purus sapien laoreet nec
-            malesuada cras auctor. Pellentesque viverra faucibus at arcu
-            felis risus accumsan sit. At est ullamcorper maecenas egestas
-            aliquet purus elementum. In enim aliquet duis vel sit egestas
-            nisi in. Elementum pellentesque aliquam pellentesque quis.
-            Libero cras ac dolor euismod.
-            Odio at sed sapien pretium eu arcu habitasse tellus. Id aenean
-            eget est in urna. In nunc tellus ut arcu etiam eget tempus
-            nunc. Et integer duis lectus pellentesque. Eget nulla amet sed
-            tortor malesuada id. Nunc mauris in amet ac ut. Morbi aliguam
-            nibh viverra euismod adipiscing. Convallis dictum nullam
-            scelerisque volutpat.
-            Etiam rhoncus cursus cras quam sapien phasellus. Ac erat
-            cursus id in. Interdum viverra scelerisque elit pulvinar etiam id.
-            Proin lectus suspendisse odio metus imperdiet nibh. Orci
-            dignissim mauris lectus nunc praesent nulla. Habitasse quis
-            cursus commodo mi dignissim aliquet. Augue porta quis
-            egestas accumsan. Ut ultricies faucibus dignissim
-            consectetur ornare. Dictum lectus sed justo quam sagittis
-            scelerisque nulla sed. Praesent tincidunt in lacus hendrerit
-            eget sed lectus ut vitae.
-            Nunc sed odio blandit ut felis dictum consectetur at netus. Eu
-            adipiscing scelerisque lacinia potenti in. Quam mauris blandit.</p>
+          <p>¡Bienvenido a Domii! Somos un equipo apasionado y comprometido de profesionales que trabajamos juntos para brindarte el mejor servicio de mensajería en Colombia. Conócenos y descubre quiénes somos:</p>
+          <br>
+          <ul>
+            <li><strong>Diseñador Creativo:</strong>Nuestro talentoso diseñador se encarga de dar vida a la identidad visual de Domii. Con su creatividad y habilidades en diseño, garantiza una experiencia visual atractiva y fácil de usar para nuestros usuarios. </li>
+            <br>
+            <li><strong>Experto en Marketing:</strong>Nuestro especialista en marketing trabaja arduamente para dar a conocer Domii a más pequeñas empresas en Colombia. A través de estrategias efectivas, promovemos nuestros servicios y nos aseguramos de que cada negocio pueda aprovechar al máximo nuestros envíos rápidos y seguros.</li>
+            <br>
+            <li><strong>Gerente Ejecutivo:</strong> Nuestro gerente se encarga de supervisar y coordinar todas las operaciones en Domii. Su experiencia en la industria asegura que cada detalle, desde el proceso de entrega hasta la satisfacción del cliente, esté bajo control para ofrecerte un servicio confiable.</li>
+            <br>
+            <li><strong>Equipo de Servicio al Cliente:</strong>Nuestro dedicado equipo de servicio al cliente está aquí para ayudarte en cada paso del camino. Si tienes alguna pregunta, inquietud o necesitas asistencia, ellos estarán encantados de brindarte el soporte necesario y garantizar tu satisfacción.</li>
+            <br>
+          </ul>
+          <p>En Domii, nos esforzamos por ofrecerte un servicio de mensajería eficiente y confiable, respaldado por un equipo comprometido y altamente capacitado. Estamos aquí para ayudarte a crecer tu negocio y hacer que tus envíos sean rápidos y seguros.
+            <br>
+            <br>
+            ¡Gracias por confiar en Domii!</p>
         </div>
       </div>
     </section>
@@ -116,43 +79,41 @@
 
   <!-- Pie de página -->
   <footer>
-    <div class="info">
-      <a href="">
-        <h4>Quienes somos</h4>
-      </a>
-      <a href="">
-        <h4>Blog</h4>
-      </a>
-      <a href="">
-        <h4>Contacto</h4>
-      </a>
-      <a href="">
-        <h4>Atención y PQRS</h4>
-      </a>
-      <a href="">
-        <h4>Preguntas frecuentes</h4>
-      </a>
-    </div>
-    <div class="contacto">
-      <h4>Contactanos</h4>
-      <div class="logosinfo">
-        <a href=""><img src="../assets/img/insta.png" alt=""></a>
-        <a href=""><img src="../assets/img/face.png" alt=""></a>
-        <a href=""><img src="../assets/img/tik.png" alt=""></a>
+    <section class="footer">
+        <div class="info">
+            <a href="../pages/quienesomos.html">
+                <h4>Quienes somos</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Blog</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Contacto</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Atención y PQRS</h4>
+            </a>
+            <a href="../pages/quienesomos.html">
+                <h4>Preguntas frecuentes</h4>
+            </a>
+        </div>
+        <div class="contacto">
+            <h4>Contactanos</h4>
+            <div class="logosinfo">
+                <a href="https://www.instagram.com/" target= _blank ><img src="../assets/img/insta.png" alt="link de red social instagram"></a>
+                <a href="https://www.facebook.com/" target= _blank><img src="../assets/img/face.png" alt="link de red social facebook"></a>
+                <a href="https://www.tiktok.com/es/" target= _blank><img src="../assets/img/tik.png" alt="link de red social tiktok"></a>
 
-      </div>
+            </div>
 
-    </div>
-
-  </footer>
+        </div>
+    </section>
+<div class="derechos">
+    <p>Derechos de Autor &copy; 2023 Domii. Todos los derechos reservados.</p>
+</div>
+</footer>
   <!-- FIN Pie de página -->
 
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.7/dist/umd/popper.min.js"
-    integrity="sha384-zYPOMqeu1DAVkHiLqWBUTcbYfZ8osu1Nd6Z89ify25QV9guujx43ITvfi12/QExE"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-    integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-    crossorigin="anonymous"></script>
 </body>
 
 </html>
